# AdventOfCode-Rust

./: Cargo.toml
src/: aoc.rs  main.rs
src/aoc2021/: day_01.rs  mod.rs
